src/objects/Tender__c.object
<CustomObject>
    <description>Modalità di pagamento utilizzati nelle transazioni Xstore / E-Commerce</description>
    <fields>
        <fullName>Codice_Cassa__c</fullName>
        <label>Codice Cassa</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Tender__c</fullName>
        <label>Data Tender</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Descrizione_Tender__c</fullName>
        <label>Descrizione Tender</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_Location_Micros__c</fullName>
        <label>Id Location Micros</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_Location__c</fullName>
        <label>Id Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Importo__c</fullName>
        <description>Valore pagato a fronte di un numero scontrino a parità di tender. Nel caso di sales tax c&apos;è squadratura con i valori passati da Micros, in quanto nel tender sono comprese</description>
        <label>Importo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <formula>Numero_Transazione__c &amp; Id_Location_Micros__c &amp; Codice_Cassa__c &amp; Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_Transazione__c</fullName>
        <label>Numero Transazione</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tender_Key_ETL__c</fullName>
        <externalId>true</externalId>
        <label>Tender Key ETL</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Tipo_Pagamento__c</fullName>
        <label>Tipo Pagamento</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction__c</fullName>
        <label>Transazione</label>
        <referenceTo>Transaction__c</referenceTo>
        <relationshipLabel>Tenders</relationshipLabel>
        <relationshipName>Tenders</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Tender</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Tutto</label>
    </listViews>
    <nameField>
        <label>Nome Tender</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tenders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>